# fastapi_zero

./: .coverage  .env  .gitignore  README.md  database.db  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 260cb429fc4b_create_users_table.py  94a43237bab1_add_update_date_create_users.py  9e2a938a8296_add_created_and_updated_on_table_todo.py  a8897140b5b4_add_update_field_in_users_table.py  bf144007aeeb_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
